tests/whole_screen/snapshots/whole_screen__the_arrows_walk_the_highlight_and_the_window_follows_it.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1117
expression: steadied_picture(&window.picture())
---
80x24 cursor 21,4 scrolled 0
|                                                                               │|
|● Bash(sleep 30)                                                               │|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)                              │|
|                                                                               │|
|It is started. That is all.                                                    ●|
|                                                                               ┃|
|✳ writing (0s · ↓ 4 · esc to interrupt)                                         |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|5 queued · ctrl+enter to send all now                                           |
|                                                                                |
|  then run the whole gate                                                       |
|                                                                                |
|  check the ascii glyphs too                                                    |
|                                                                                |
|› update the changelog entry                                                    |
|                                                                                |
|↑↓ to walk · ctrl+e to edit · ctrl+x to delete · ctrl+s to send now             |
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle) · 1 command           anthropic · claude-test-1|
