tests/whole_screen/snapshots/whole_screen__the_effort_ladder_stands_in_a_window_a_panel_of_the_same_five_would_fill.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 23,0 scrolled 0
|│ · shift+tab  steps the permission mode                                      ││|
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               │|
|                                                                               │|
|Warning: No models available. Use /login or set an API key environment         │|
|variable. Then use /model to select a model.                                   │|
|                                                                               ┃|
|› /login anthropic                                                             ┃|
|⎿ login successful; choose a model with /model                                 ┃|
|                                                                               ┃|
|› /model claude-test-1                                                         ┃|
|⎿ anthropic · claude-test-1                                                    ┃|
|                                                                               ┃|
|› /effort                                                                      ┃|
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Effort · claude-test-1                                                          |
|                                                                                |
|Faster                                                 Smarter                  |
|───────────────────────────────▲──────────────────────────────                  |
|  low         medium         high          xhigh          max                   |
|                                                                                |
|←/→ to adjust · enter to confirm · esc to cancel                                |
