tests/whole_screen/snapshots/whole_screen__the_key_box_stands_empty_under_the_provider_it_is_for.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
80x24 cursor 20,4 scrolled 0
|│                                  │ · /          opens the command list       │|
|│                                  │ · \ enter    adds a line without sending  │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl+c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|                                                                                |
|Warning: No models available. Use /login or set an API key environment variable.|
|Then use /model to select a model.                                              |
|                                                                                |
|› /login                                                                        |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Log in                                                                          |
|                                                                                |
|› Anthropic — provide your own API key                                          |
|                                                                                |
|Paste or type the key. It goes to crucible's protected store and is never shown.|
|                                                                                |
|╭── Anthropic API key ─────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|paste or type your API key · esc to go back                                     |
|                                                                                |
