tests/whole_screen/snapshots/whole_screen__the_login_panel_offers_the_plans_the_reader_may_hold_and_a_key_of_their_own.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1437
expression: picture
---
80x24 cursor 23,0 scrolled 0
|│ · /          opens the command list                                         ││|
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      ││|
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               ┃|
|                                                                               ┃|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|› /login                                                                       ┃|
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Log in                                                                          |
|                                                                                |
|Choose how usage is paid for.                                                   |
|                                                                                |
|› Your account with subscription                                                |
|  Usage included in your paid plan                                              |
|                                                                                |
|  Provide your own API key                                                      |
|  API usage billing                                                             |
|                                                                                |
|esc to cancel                                                                   |
