tests/whole_screen/snapshots/whole_screen__the_open_queue_wraps_its_keys_in_a_narrow_window.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
40x24 cursor 21,4 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|› start it                              |
|                                        |
|● Bash(sleep 30)                        |
|  ⎿ (no … (+2 lines · ctrl+o to expand) |
|                                        |
|It is started. That is all.             |
|                                        |
|                                        |
|────────────────────────────────────────|
|                                        |
|1 queued                                |
|                                        |
|› and add a test for the windows path   |
|                                        |
|↑↓ to walk · e edit · d delete · esc to |
|close                                   |
|                         99% window left|
|╭──────────────────────────────────────╮|
|│ ›                                    │|
|╰──────────────────────────────────────╯|
|ask mode on    anthropic · claude-test-1|
