tests/whole_screen/snapshots/whole_screen__the_panel_a_run_opens_on_reaches_a_turn_without_a_command_being_typed.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 10,4 scrolled 12
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|                                                                                |
|Warning: No models available. Use /login or set an API key environment variable.|
|Then use /model to select a model.                                              |
|                                                                                |
|logged in to anthropic, asking claude-test-1                                    |
|› what is 2+2                                                                   |
|Two plus two is four.                                                           |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
