tests/whole_screen/snapshots/whole_screen__the_resume_picker_opens_on_this_directory.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1936
expression: window.picture()
---
80x24 cursor 1,10 scrolled 0
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ Search    a session, or a branch                                             │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
| Resume a session · 2 of 2 · ~/a-directory-to-be-working-in/and-something-below |
|                                                                                |
|╭──────────────────────────────╮ ╭─────────────────────────────────────────────╮|
|│ › fix the failing parser tes │ │ › fix the failing parser test               │|
|│   just now · main            │ │                                             │|
|│                              │ │                                             │|
|│   draft the parser rewrite   │ │                                             │|
|│   just now · feature         │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │ ────────────────────────────────────────────│|
|│                              │ │ just now · 1 message · main                 │|
|│                              │ │ Enter to resume · Esc to cancel             │|
|╰──────────────────────────────╯ ╰─────────────────────────────────────────────╯|
|                                                                                |
| ctrl+a all projects · ctrl+b this branch · ctrl+w worktrees · esc              |
