tests/whole_screen/snapshots/whole_screen__the_same_session_in_a_narrow_window_is_the_same_screen_at_its_width.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
40x24 cursor 21,4 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|                                        |
|Warning: No models available. Use       |
|/login or set an API key environment    |
|variable. Then use /model to select a   |
|model.                                  |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|╭──────────────────────────────────────╮|
|│ ›                                    │|
|╰──────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)        |
